Добавлена возможность фильтрации лотов по дате их создания
